--- a/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
-quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+quarkus.datasource.password=sa
 
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=schema.sql
 
 %prod.quarkus.log.category."${package}".level=INFO
+%prod.quarkus.datasource.jdbc.url=jdbc:h2:mem:default;DB_CLOSE_DELAY=-1
+
 %dev.quarkus.log.category."${package}".level=DEBUG
+%dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
