finished first implementation

--- a/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -7,7 +7,10 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=schema.sql
 
 %prod.quarkus.log.category."${package}".level=INFO
-%prod.quarkus.datasource.jdbc.url=jdbc:h2:mem:default;DB_CLOSE_DELAY=-1
+%prod.quarkus.datasource.jdbc.url=jdbc:h2:tcp://h2/~/default;DB_CLOSE_DELAY=-1
 
 %dev.quarkus.log.category."${package}".level=DEBUG
 %dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+%test.quarkus.hibernate-orm.sql-load-script=test-schema.sql
