--- a/src/main/resources/archetype-resources/src/main/docker/Dockerfile.h2
+++ b/src/main/resources/archetype-resources/src/main/docker/Dockerfile.h2
@@ -9,4 +9,4 @@ RUN wget https://search.maven.org/remotecontent?filepath=com/h2database/h2/2.1.2
 
 RUN mv remotecontent?filepath=com%2Fh2database%2Fh2%2F2.1.212%2Fh2-2.1.212.jar h2-2.1.212.jar
 
-ENTRYPOINT java -cp h2*.jar org.h2.tools.Server -webAllowOthers
+ENTRYPOINT java -cp h2*.jar org.h2.tools.Server -webAllowOthers -tcpAllowOthers -ifNotExists
