start native and jvm + best practices

--- a/src/main/resources/archetype-resources/docker-compose.yaml
+++ b/src/main/resources/archetype-resources/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   quarkus:
-    image: ${username}/${artifactId} 
+    image: ${username}/${artifactId}:native
     ports:
       - "8080:8080"
     links:
