--- a/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -3,14 +3,23 @@ quarkus.datasource.username=sa
 quarkus.datasource.password=sa
 
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
-quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.sql-load-script=schema.sql
 
 %prod.quarkus.log.category."${package}".level=INFO
-%prod.quarkus.datasource.jdbc.url=jdbc:h2:tcp://h2/~/default;DB_CLOSE_DELAY=-1
+%prod.quarkus.datasource.jdbc.url=jdbc:h2:mem:prod;DB_CLOSE_DELAY=-1
+%prod.quarkus.hibernate-orm.database.generation=none
+%prod.quarkus.hibernate-orm.sql-load-script=no-file
+
+%native.quarkus.log.category."${package}".level=INFO
+%native.quarkus.datasource.jdbc.url=jdbc:h2:tcp://h2/~/default;DB_CLOSE_DELAY=-1
+%native.quarkus.hibernate-orm.database.generation=none
+%native.quarkus.hibernate-orm.sql-load-script=no-file
 
 %dev.quarkus.log.category."${package}".level=DEBUG
-%dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+%dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:dev;DB_CLOSE_DELAY=-1
+%dev.quarkus.hibernate-orm.database.generation=drop-and-create
+%dev.quarkus.hibernate-orm.sql-load-script=schema.sql
 
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
 %test.quarkus.hibernate-orm.sql-load-script=test-schema.sql
+
